rs/macros/ethexe/tests/snapshots/program_insta__generates_handle_for_services_with_unwrap_result.snap
---
source: rs/macros/ethexe/tests/program_insta.rs
expression: result
---
impl MyProgram {
    fn __service1(&self) -> Result<MyService, String> {
        Ok(MyService)
    }
    fn __service2(&self) -> MyService {
        MyService
    }
    pub fn default() -> Self {
        Self
    }
    pub fn service1(
        &self,
    ) -> <MyService as sails_rs::gstd::services::Service>::Exposure {
        let service = self.__service1().unwrap();
        let exposure = <MyService as sails_rs::gstd::services::Service>::expose(
            service,
            sails_rs::gstd::msg::id().into(),
            __ROUTE_SVC1.as_ref(),
        );
        exposure
    }
    pub fn service2(
        &self,
    ) -> <MyService as sails_rs::gstd::services::Service>::Exposure {
        let service = self.__service2();
        let exposure = <MyService as sails_rs::gstd::services::Service>::expose(
            service,
            sails_rs::gstd::msg::id().into(),
            __ROUTE_SERVICE2.as_ref(),
        );
        exposure
    }
}
const __ROUTE_SVC1: [u8; 5usize] = [16u8, 83u8, 118u8, 99u8, 49u8];
const __ROUTE_SERVICE2: [u8; 9usize] = [
    32u8,
    83u8,
    101u8,
    114u8,
    118u8,
    105u8,
    99u8,
    101u8,
    50u8,
];
impl sails_rs::meta::ProgramMeta for MyProgram {
    type ConstructorsMeta = meta_in_program::ConstructorsMeta;
    const SERVICES: &'static [(&'static str, sails_rs::meta::AnyServiceMetaFn)] = &[
        ("Svc1", sails_rs::meta::AnyServiceMeta::new::<MyService>),
        ("Service2", sails_rs::meta::AnyServiceMeta::new::<MyService>),
    ];
}
mod meta_in_program {
    use super::*;
    #[derive(sails_rs::Decode, sails_rs::TypeInfo)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[allow(dead_code)]
    pub struct __DefaultParams {}
    #[derive(sails_rs::TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum ConstructorsMeta {
        Default(__DefaultParams),
    }
}
impl sails_rs::solidity::ProgramSignature for MyProgram {
    const CTORS: &'static [sails_rs::solidity::MethodRoute] = &[
        (
            sails_rs::concatcp!(
                "default", << (u128,) as sails_rs::alloy_sol_types::SolValue > ::SolType
                as sails_rs::alloy_sol_types::SolType > ::SOL_NAME,
            ),
            &[28u8, 68u8, 101u8, 102u8, 97u8, 117u8, 108u8, 116u8] as &[u8],
        ),
    ];
    const SERVICES: &'static [(
        &'static str,
        &'static [u8],
        &'static [sails_rs::solidity::MethodRoute],
    )] = &[
        (
            "service2",
            &[32u8, 83u8, 101u8, 114u8, 118u8, 105u8, 99u8, 101u8, 50u8] as &[u8],
            <MyService as sails_rs::solidity::ServiceSignature>::METHODS,
        ),
        (
            "svc1",
            &[16u8, 83u8, 118u8, 99u8, 49u8] as &[u8],
            <MyService as sails_rs::solidity::ServiceSignature>::METHODS,
        ),
    ];
    const METHODS_LEN: usize = <MyService as sails_rs::solidity::ServiceSignature>::METHODS
        .len() + <MyService as sails_rs::solidity::ServiceSignature>::METHODS.len();
}
const __CTOR_SIGS: [[u8; 4]; <MyProgram as sails_rs::solidity::ProgramSignature>::CTORS
    .len()] = sails_rs::solidity::ConstProgramMeta::<MyProgram>::ctor_sigs();
const __METHOD_SIGS: [[u8; 4]; <MyProgram as sails_rs::solidity::ProgramSignature>::METHODS_LEN] = sails_rs::solidity::ConstProgramMeta::<
    MyProgram,
>::method_sigs();
const __METHOD_ROUTES: [(
    &'static [u8],
    &'static [u8],
); <MyProgram as sails_rs::solidity::ProgramSignature>::METHODS_LEN] = sails_rs::solidity::ConstProgramMeta::<
    MyProgram,
>::method_routes();
#[cfg(target_arch = "wasm32")]
pub mod wasm {
    use super::*;
    use sails_rs::{gstd, hex, prelude::*};
    static mut PROGRAM: Option<MyProgram> = None;
    #[gstd::async_init]
    async fn init() {
        sails_rs::gstd::events::__enable_events();
        let mut input: &[u8] = &sails_rs::gstd::msg::load_bytes()
            .expect("Failed to read input");
        if let Ok(sig) = TryInto::<[u8; 4]>::try_into(&input[..4]) {
            if let Some(idx) = __CTOR_SIGS.iter().position(|s| s == &sig) {
                let (_, ctor_route) = <MyProgram as sails_rs::solidity::ProgramSignature>::CTORS[idx];
                unsafe {
                    PROGRAM = match_ctor_solidity(ctor_route, &input[4..]).await;
                }
                if unsafe { PROGRAM.is_some() } {
                    sails_rs::gstd::msg::reply_bytes(ctor_route, 0)
                        .expect("Failed to send output");
                    return;
                }
            }
        }
        let (program, invocation_route) = if input
            .starts_with(&[28u8, 68u8, 101u8, 102u8, 97u8, 117u8, 108u8, 116u8])
        {
            const INVOCATION_ROUTE: &[u8] = &[
                28u8,
                68u8,
                101u8,
                102u8,
                97u8,
                117u8,
                108u8,
                116u8,
            ];
            let request = meta_in_program::__DefaultParams::decode(&mut &input[8usize..])
                .expect("Failed to decode request");
            let program = MyProgram::default();
            (program, INVOCATION_ROUTE)
        } else {
            sails_rs::gstd::unknown_input_panic("Unexpected ctor", input)
        };
        unsafe {
            PROGRAM = Some(program);
        }
        sails_rs::gstd::msg::reply_bytes(invocation_route, 0)
            .expect("Failed to send output");
    }
    async fn match_ctor_solidity(ctor: &[u8], input: &[u8]) -> Option<MyProgram> {
        if ctor == &[28u8, 68u8, 101u8, 102u8, 97u8, 117u8, 108u8, 116u8] {
            let (): () = sails_rs::alloy_sol_types::SolValue::abi_decode_params(
                    input,
                    false,
                )
                .expect("Failed to decode request");
            let program = MyProgram::default();
            return Some(program);
        }
        None
    }
    #[gstd::async_main]
    async fn main() {
        let mut input: &[u8] = &sails_rs::gstd::msg::load_bytes()
            .expect("Failed to read input");
        let program_ref = unsafe { PROGRAM.as_ref() }.expect("Program not initialized");
        if let Ok(sig) = TryInto::<[u8; 4]>::try_into(&input[..4]) {
            if let Some(idx) = __METHOD_SIGS.iter().position(|s| s == &sig) {
                let (route, method) = __METHOD_ROUTES[idx];
                if route == &__ROUTE_SVC1 {
                    let mut service = program_ref.service1();
                    let (output, value) = service
                        .try_handle_solidity(method, &input[4..])
                        .await
                        .unwrap_or_else(|| {
                            sails_rs::gstd::unknown_input_panic("Unknown request", input)
                        });
                    sails_rs::gstd::msg::reply_bytes(output, value)
                        .expect("Failed to send output");
                    return;
                }
                if route == &__ROUTE_SERVICE2 {
                    let mut service = program_ref.service2();
                    let (output, value) = service
                        .try_handle_solidity(method, &input[4..])
                        .await
                        .unwrap_or_else(|| {
                            sails_rs::gstd::unknown_input_panic("Unknown request", input)
                        });
                    sails_rs::gstd::msg::reply_bytes(output, value)
                        .expect("Failed to send output");
                    return;
                }
            }
        }
        let (output, value): (Vec<u8>, ValueUnit) = if input.starts_with(&__ROUTE_SVC1) {
            let mut service = program_ref.service1();
            let (output, value) = service
                .try_handle(&input[__ROUTE_SVC1.len()..])
                .await
                .unwrap_or_else(|| {
                    sails_rs::gstd::unknown_input_panic("Unknown request", input)
                });
            ([__ROUTE_SVC1.as_ref(), &output].concat(), value)
        } else if input.starts_with(&__ROUTE_SERVICE2) {
            let mut service = program_ref.service2();
            let (output, value) = service
                .try_handle(&input[__ROUTE_SERVICE2.len()..])
                .await
                .unwrap_or_else(|| {
                    sails_rs::gstd::unknown_input_panic("Unknown request", input)
                });
            ([__ROUTE_SERVICE2.as_ref(), &output].concat(), value)
        } else {
            sails_rs::gstd::unknown_input_panic("Unexpected service", input)
        };
        sails_rs::gstd::msg::reply_bytes(output, value).expect("Failed to send output");
    }
}
