rs/macros/ethexe/tests/snapshots/program_insta__generates_handle_for_single_service_with_non_empty_route.snap
---
source: rs/macros/ethexe/tests/program_insta.rs
expression: result
---
impl MyProgram {
    fn __service(&self) -> MyService {
        MyService
    }
    pub fn default() -> Self {
        Self
    }
    pub fn service(&self) -> <MyService as sails_rs::gstd::services::Service>::Exposure {
        let service = self.__service();
        let exposure = <MyService as sails_rs::gstd::services::Service>::expose(
            service,
            sails_rs::gstd::msg::id().into(),
            __ROUTE_SERVICE.as_ref(),
        );
        exposure
    }
}
const __ROUTE_SERVICE: [u8; 8usize] = [
    28u8,
    83u8,
    101u8,
    114u8,
    118u8,
    105u8,
    99u8,
    101u8,
];
impl sails_rs::meta::ProgramMeta for MyProgram {
    type ConstructorsMeta = meta_in_program::ConstructorsMeta;
    const SERVICES: &'static [(&'static str, sails_rs::meta::AnyServiceMetaFn)] = &[
        ("Service", sails_rs::meta::AnyServiceMeta::new::<MyService>),
    ];
}
mod meta_in_program {
    use super::*;
    #[derive(sails_rs::Decode, sails_rs::TypeInfo)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub struct __DefaultParams {}
    impl sails_rs::gstd::InvocationIo for __DefaultParams {
        const ROUTE: &'static [u8] = &[
            28u8,
            68u8,
            101u8,
            102u8,
            97u8,
            117u8,
            108u8,
            116u8,
        ];
        type Params = Self;
    }
    #[derive(sails_rs::TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum ConstructorsMeta {
        Default(__DefaultParams),
    }
}
impl sails_rs::solidity::ProgramSignature for MyProgram {
    const CTORS: &'static [sails_rs::solidity::MethodRoute] = &[
        (
            sails_rs::concatcp!(
                "default", << (u128,) as sails_rs::alloy_sol_types::SolValue > ::SolType
                as sails_rs::alloy_sol_types::SolType > ::SOL_NAME,
            ),
            &[28u8, 68u8, 101u8, 102u8, 97u8, 117u8, 108u8, 116u8] as &[u8],
        ),
    ];
    const SERVICES: &'static [(
        &'static str,
        &'static [u8],
        &'static [sails_rs::solidity::MethodRoute],
    )] = &[
        (
            "service",
            &[28u8, 83u8, 101u8, 114u8, 118u8, 105u8, 99u8, 101u8] as &[u8],
            <MyService as sails_rs::solidity::ServiceSignature>::METHODS,
        ),
    ];
    const METHODS_LEN: usize = <MyService as sails_rs::solidity::ServiceSignature>::METHODS
        .len();
}
const __CTOR_SIGS: [[u8; 4]; <MyProgram as sails_rs::solidity::ProgramSignature>::CTORS
    .len()] = sails_rs::solidity::ConstProgramMeta::<MyProgram>::ctor_sigs();
const __METHOD_SIGS: [[u8; 4]; <MyProgram as sails_rs::solidity::ProgramSignature>::METHODS_LEN] = sails_rs::solidity::ConstProgramMeta::<
    MyProgram,
>::method_sigs();
const __METHOD_ROUTES: [(
    &'static [u8],
    &'static [u8],
); <MyProgram as sails_rs::solidity::ProgramSignature>::METHODS_LEN] = sails_rs::solidity::ConstProgramMeta::<
    MyProgram,
>::method_routes();
#[cfg(target_arch = "wasm32")]
pub mod wasm {
    use super::*;
    use sails_rs::{gstd, hex, prelude::*};
    static mut PROGRAM: Option<MyProgram> = None;
    #[gstd::async_init]
    async fn init() {
        use sails_rs::gstd::InvocationIo;
        sails_rs::gstd::events::__enable_events();
        let mut input: &[u8] = &sails_rs::gstd::msg::load_bytes()
            .expect("Failed to read input");
        if let Ok(sig) = TryInto::<[u8; 4]>::try_into(&input[..4]) {
            if let Some(idx) = __CTOR_SIGS.iter().position(|s| s == &sig) {
                let (_, ctor_route) = <MyProgram as sails_rs::solidity::ProgramSignature>::CTORS[idx];
                unsafe {
                    PROGRAM = match_ctor_solidity(ctor_route, &input[4..]).await;
                }
                if unsafe { PROGRAM.is_some() } {
                    sails_rs::gstd::msg::reply_bytes(ctor_route, 0)
                        .expect("Failed to send output");
                    return;
                }
            }
        }
        let (program, invocation_route) = if let Ok(request) = meta_in_program::__DefaultParams::decode_params(
            &input,
        ) {
            let program = MyProgram::default();
            (program, meta_in_program::__DefaultParams::ROUTE)
        } else {
            sails_rs::gstd::unknown_input_panic("Unexpected ctor", input)
        };
        unsafe {
            PROGRAM = Some(program);
        }
        sails_rs::gstd::msg::reply_bytes(invocation_route, 0)
            .expect("Failed to send output");
    }
    async fn match_ctor_solidity(ctor: &[u8], input: &[u8]) -> Option<MyProgram> {
        if ctor == &[28u8, 68u8, 101u8, 102u8, 97u8, 117u8, 108u8, 116u8] {
            let (): () = sails_rs::alloy_sol_types::SolValue::abi_decode_params(
                    input,
                    false,
                )
                .expect("Failed to decode request");
            let program = MyProgram::default();
            return Some(program);
        }
        None
    }
    #[gstd::async_main]
    async fn main() {
        let mut input: &[u8] = &sails_rs::gstd::msg::load_bytes()
            .expect("Failed to read input");
        let program_ref = unsafe { PROGRAM.as_ref() }.expect("Program not initialized");
        if let Ok(sig) = TryInto::<[u8; 4]>::try_into(&input[..4]) {
            if let Some(idx) = __METHOD_SIGS.iter().position(|s| s == &sig) {
                let (route, method) = __METHOD_ROUTES[idx];
                if route == &__ROUTE_SERVICE {
                    let mut service = program_ref.service();
                    let (output, value) = service
                        .try_handle_solidity(method, &input[4..])
                        .await
                        .unwrap_or_else(|| {
                            sails_rs::gstd::unknown_input_panic("Unknown request", input)
                        });
                    sails_rs::gstd::msg::reply_bytes(output, value)
                        .expect("Failed to send output");
                    return;
                }
            }
        }
        let (output, value): (Vec<u8>, ValueUnit) = if input
            .starts_with(&__ROUTE_SERVICE)
        {
            let mut service = program_ref.service();
            let (output, value) = service
                .try_handle(&input[__ROUTE_SERVICE.len()..])
                .await
                .unwrap_or_else(|| {
                    sails_rs::gstd::unknown_input_panic("Unknown request", input)
                });
            ([__ROUTE_SERVICE.as_ref(), &output].concat(), value)
        } else {
            sails_rs::gstd::unknown_input_panic("Unexpected service", input)
        };
        sails_rs::gstd::msg::reply_bytes(output, value).expect("Failed to send output");
    }
}
